Modify tests to no longer depend on obsolete files
This also narrows the return types as appropriate for each concrete
type.